ControlsAndShortcuts : Update activeRenderPass icon
This duplicate of the icon didn't get the message when we changed from green to "context yellow". We now copy it from `$GAFFER_ROOT/graphics` as part of the docs build to ensure it stays up to date.

--- a/doc/source/Interface/ControlsAndShortcuts/.gitignore
+++ b/doc/source/Interface/ControlsAndShortcuts/.gitignore
@@ -2,3 +2,4 @@ images/mouseLeftClick.png
 images/mouseRightClick.png
 images/mouseMiddleClick.png
 images/mouseWheelUpDown.png
+images/activeRenderPass.png
