CI : Ensure access to secrets when builds are run from nightly workflow
Otherwise nightly builds have no access to Arnold or RenderMan.

Secrets need to be passed from the calling workflow to reusable workflows, though we can set `inherit` on the calling workflow to implicitly pass all secrets.

https://docs.github.com/en/actions/how-tos/reuse-automations/reuse-workflows#passing-inputs-and-secrets-to-a-reusable-workflow

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -71,6 +71,7 @@ jobs:
     uses: ./.github/workflows/main.yml
     with:
       buildType: 'nightly'
+    secrets: inherit
     if: needs.Check.outputs.buildNightly == '1'
 
   Tag:
