--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -95,6 +95,10 @@ jobs:
       # The MAC address is required by our RenderMan license. The `--privileged`
       # option is needed to run docker containers inside the main docker container.
       options: --mac-address a4:bb:6d:cf:40:7a --privileged
+      volumes:
+        # Mount the `/usr` directory from the host so we can clean it up
+        # in "Install toolchain (Linux)".
+        - /usr:/hostVolume/usr
 
     env:
       ARNOLD_LICENSE_ORDER: none # Don't waste time looking for a license that doesn't exist
@@ -127,8 +131,12 @@ jobs:
 
     - name: Install toolchain (Linux)
       run: |
+        # Clear space on runner by deleting stuff we don't need from the host VM.
+        rm -rf /hostVolume/usr/lib/jvm /hostVolume/usr/local/lib/android
+        # Set up an X server and window manager.
         Xvfb :99 -screen 0 1280x1024x24 &
         metacity --display :99.0 &
+        # Create user used for running tests.
         useradd -m testUser
         # The Docker container configures bash shells such that they enable the
         # software collections we want. If we could set GitHub's
